# winfiletime

./: README.md  filetime.py  pyproject.toml  setup.cfg
tests/: test_main.py
winfiletime/: __init__.py  filetime.py
