[metadata]
name = winfiletime
version = 1.0
description = Win32 Filetime / Datetime conversion functions
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jleclanche/winfiletime
download_url = https://github.com/jleclanche/winfiletime/archive/master.zip
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: System

[options]
py_modules = filetime
